tests/ui/traits/const-traits/tilde-const-and-const-params.stderr
error: `~const` is not allowed here
  --> $DIR/tilde-const-and-const-params.rs:9:15
   |
LL |     fn add<A: ~const Add42>(self) -> Foo<{ A::add(N) }> {
   |               ^^^^^^
   |
note: this function is not `const`, so it cannot have `~const` trait bounds
  --> $DIR/tilde-const-and-const-params.rs:9:8
   |
LL |     fn add<A: ~const Add42>(self) -> Foo<{ A::add(N) }> {
   |        ^^^

error: `~const` is not allowed here
  --> $DIR/tilde-const-and-const-params.rs:26:11
   |
LL | fn bar<A: ~const Add42, const N: usize>(_: Foo<N>) -> Foo<{ A::add(N) }> {
   |           ^^^^^^
   |
note: this function is not `const`, so it cannot have `~const` trait bounds
  --> $DIR/tilde-const-and-const-params.rs:26:4
   |
LL | fn bar<A: ~const Add42, const N: usize>(_: Foo<N>) -> Foo<{ A::add(N) }> {
   |    ^^^

error: using `#![feature(effects)]` without enabling next trait solver globally
   |
   = note: the next trait solver must be enabled globally for the effects feature to work correctly
   = help: use `-Znext-solver` to enable

error: aborting due to 3 previous errors

